Rename Babin to chartmap coordinate system with Cartesian format
Change coordinate storage from cylindrical R,Z (assuming phi=zeta)
to full Cartesian pos(X,Y,Z,rho,theta,zeta) for source-agnostic
coordinate chart mapping. This format is compatible with GVEC
visualization output and allows representing arbitrary 3D mappings.

- Rename babin_coordinate_system_t to chartmap_coordinate_system_t
- Store pos(3,nrho,ntheta,nzeta) instead of separate R,Z arrays
- Update splines to interpolate X,Y,Z directly
- Add nc_get_double_4 for 4D NetCDF array reading
- Update all test files and scripts with new naming

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -144,8 +144,8 @@ target_link_libraries(test_vmec_modules.x neo)
 add_executable(test_coordinate_systems.x source/test_coordinate_systems.f90)
 target_link_libraries(test_coordinate_systems.x neo ${MAGFIE_LIB})
 
-add_executable(test_babin_coordinates.x source/test_babin_coordinates.f90)
-target_link_libraries(test_babin_coordinates.x neo ${MAGFIE_LIB})
+add_executable(test_chartmap_coordinates.x source/test_chartmap_coordinates.f90)
+target_link_libraries(test_chartmap_coordinates.x neo ${MAGFIE_LIB})
 
 # TODO: Update test for new psi_1..psi_7 interface
 # add_executable(test_analytical_gs_circular.x source/test_analytical_gs_circular.f90)
@@ -247,16 +247,16 @@ add_test(NAME test_system_utility
 set_tests_properties(test_system_utility PROPERTIES  FAIL_REGULAR_EXPRESSION "WARNING: resource usage could not be determined.")
 
 add_test(
-  NAME setup_babin_volume
-  COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/scripts/setup_babin_volume.py
+  NAME setup_chartmap_volume
+  COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/scripts/setup_chartmap_volume.py
           --output-dir ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-add_test(NAME test_babin_coordinates
-  COMMAND test_babin_coordinates.x)
-set_tests_properties(test_babin_coordinates PROPERTIES
+add_test(NAME test_chartmap_coordinates
+  COMMAND test_chartmap_coordinates.x)
+set_tests_properties(test_chartmap_coordinates PROPERTIES
   FAIL_REGULAR_EXPRESSION "STOP"
-  DEPENDS setup_babin_volume)
+  DEPENDS setup_chartmap_volume)
 
 add_subdirectory(util_for_test)
 add_subdirectory(util_for_test_field)
