--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,10 @@ jobs:
         run: |
           make
 
+      - name: Install Python dependencies for tests
+        run: |
+          pip install --break-system-packages ".[dev]"
+
       - name: Test
         run: |
           cd build && ctest --output-on-failure
