--- a/CMakeSources.in
+++ b/CMakeSources.in
@@ -25,6 +25,7 @@ add_library(neo STATIC
     src/coordinates/libneo_coordinates.f90
     src/coordinates/libneo_coordinates_vmec.f90
     src/coordinates/libneo_coordinates_geoflux.f90
+    src/coordinates/libneo_coordinates_chartmap.f90
     src/spline_vmec_data.f90
     src/vmecinm_m.f90
     src/vmec/vmec_field_tools.f90
