--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -286,6 +286,15 @@ set_tests_properties(test_vmec_coordinate_system PROPERTIES
   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
   DEPENDS setup_vmec_wout)
 
+add_executable(test_chartmap_matches_vmec.x source/test_chartmap_matches_vmec.f90)
+target_link_libraries(test_chartmap_matches_vmec.x neo)
+add_test(NAME test_chartmap_matches_vmec
+  COMMAND test_chartmap_matches_vmec.x)
+set_tests_properties(test_chartmap_matches_vmec PROPERTIES
+  FAIL_REGULAR_EXPRESSION "STOP"
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  DEPENDS setup_vmec_wout)
+
 add_subdirectory(util_for_test)
 add_subdirectory(util_for_test_field)
 add_subdirectory(field)
