chartmap: restrict zeta_convention; add VMEC mapping helper

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -295,6 +295,15 @@ set_tests_properties(test_chartmap_matches_vmec PROPERTIES
   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
   DEPENDS setup_vmec_wout)
 
+add_executable(test_chartmap_vmec_mapping.x source/test_chartmap_vmec_mapping.f90)
+target_link_libraries(test_chartmap_vmec_mapping.x neo)
+add_test(NAME test_chartmap_vmec_mapping
+  COMMAND test_chartmap_vmec_mapping.x)
+set_tests_properties(test_chartmap_vmec_mapping PROPERTIES
+  FAIL_REGULAR_EXPRESSION "STOP"
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  DEPENDS setup_vmec_wout)
+
 add_subdirectory(util_for_test)
 add_subdirectory(util_for_test_field)
 add_subdirectory(field)
