Chartmap: restrict zeta_convention; add VMEC mapping helper (#170)
Implements issue #164 on top of a temporary restriction: only
zeta_convention=cyl or vmec is accepted.

Changes
- Require global attribute zeta_convention; reject others (temporary).
- Treat zeta_convention=vmec the same as cyl for now.
- Add mapping helper module libneo_coordinates_mapping with
map_vmec_u_to_chartmap_u.
- Add test test_chartmap_vmec_mapping.
- Add refcoords file detection helper detect_refcoords_file_type
(chartmap vs VMEC wout) to support SIMPLE #225.
* Detection now validates chartmap via validate_chartmap_file and
returns a nonzero ierr/message when the file has chartmap shape but is
malformed.
- Add test test_refcoords_file_detection (covers valid chartmap/wout and
malformed chartmap missing zeta_convention).

Test evidence
- make test: /tmp/libneo_make_test_issue164_vmec_as_cyl.log
- targeted ctest: /tmp/libneo_issue170_ctest_refcoords_and_chartmap.log

--- a/CMakeSources.in
+++ b/CMakeSources.in
@@ -28,6 +28,8 @@ add_library(neo STATIC
     src/coordinates/libneo_coordinates_chartmap.f90
     src/coordinates/libneo_coordinates_chartmap_validator.f90
     src/coordinates/libneo_chartmap_vmec_generator.f90
+    src/coordinates/libneo_coordinates_mapping.f90
+    src/coordinates/libneo_coordinates_file_detection.f90
     src/spline_vmec_data.f90
     src/vmecinm_m.f90
     src/vmec/vmec_field_tools.f90
