--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -295,6 +295,24 @@ set_tests_properties(test_chartmap_matches_vmec PROPERTIES
   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
   DEPENDS setup_vmec_wout)
 
+add_executable(test_chartmap_vmec_mapping.x source/test_chartmap_vmec_mapping.f90)
+target_link_libraries(test_chartmap_vmec_mapping.x neo)
+add_test(NAME test_chartmap_vmec_mapping
+  COMMAND test_chartmap_vmec_mapping.x)
+set_tests_properties(test_chartmap_vmec_mapping PROPERTIES
+  FAIL_REGULAR_EXPRESSION "STOP"
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  DEPENDS setup_vmec_wout)
+
+add_executable(test_refcoords_file_detection.x source/test_refcoords_file_detection.f90)
+target_link_libraries(test_refcoords_file_detection.x neo)
+add_test(NAME test_refcoords_file_detection
+  COMMAND test_refcoords_file_detection.x)
+set_tests_properties(test_refcoords_file_detection PROPERTIES
+  FAIL_REGULAR_EXPRESSION "STOP"
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  DEPENDS "setup_vmec_wout;setup_chartmap_volume")
+
 add_subdirectory(util_for_test)
 add_subdirectory(util_for_test_field)
 add_subdirectory(field)
