--- a/CMakeSources.in
+++ b/CMakeSources.in
@@ -22,6 +22,7 @@ add_library(neo STATIC
     src/coordinates/cylindrical_cartesian.f90
     src/coordinates/vmec_coordinates.f90
     src/coordinates/geoflux_coordinates.f90
+    src/coordinates/libneo_coordinate_conventions.f90
     src/coordinates/libneo_coordinates.f90
     src/coordinates/libneo_coordinates_vmec.f90
     src/coordinates/libneo_coordinates_geoflux.f90
