fix: correct derivative indexing in chartmap_covariant_basis
The chartmap_eval_cart_der function had incorrect derivative indexing
that mixed up coordinate indices (rho, theta, phi) with Cartesian
component indices (X, Y, Z).

The bug caused covariant_basis() to return derivatives that were
~750,000x different from finite-difference approximations when using
VMEC-generated chartmaps.

Fix:
- drz(derivative_dim, quantity) where derivative_dim is 1=d/drho,
  2=d/dtheta, 3=d/dphi and quantity is 1=R, 2=Z
- dvals(cart_component, coord_index) = d(x_cart)/d(u_coord)
- Correctly compute: dX/drho = dR/drho * cos(phi), etc.

Added test_chartmap_basis_debug.f90 for standalone debugging.

Fixes #179.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -147,6 +147,9 @@ target_link_libraries(test_coordinate_systems.x neo ${MAGFIE_LIB})
 add_executable(test_chartmap_coordinates.x source/test_chartmap_coordinates.f90)
 target_link_libraries(test_chartmap_coordinates.x neo ${MAGFIE_LIB})
 
+add_executable(test_chartmap_basis_debug.x source/test_chartmap_basis_debug.f90)
+target_link_libraries(test_chartmap_basis_debug.x neo ${MAGFIE_LIB})
+
 add_executable(test_chartmap_validator.x source/test_chartmap_validator.f90)
 target_link_libraries(test_chartmap_validator.x neo)
 
