Expose chartmap generators via Python API and CLI
Adds libneo.chartmap generators (VMEC boundary + STL), CLI entrypoint, and a CTest that validates a python-generated chartmap with libneo_coordinates (issue #183).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,12 @@ classifiers = [
 ]
 
 [project.optional-dependencies]
+chartmap = [
+    "netCDF4",
+    "map2disc @ git+https://gitlab.mpcdf.mpg.de/gvec-group/map2disc.git",
+    "scipy",
+    "trimesh",
+]
 dev = [
     "scipy",
     "matplotlib",
@@ -22,6 +28,9 @@ dev = [
     "trimesh",
     "map2disc @ git+https://gitlab.mpcdf.mpg.de/gvec-group/map2disc.git",
 ]
+
+[project.scripts]
+libneo-write-chartmap = "libneo.chartmap_cli:main"
 
 [tool.scikit-build]
 build-dir = "build/skbuild"
