Expose chartmap generators in public Python API/CLI (#184)
### **User description**
Fixes #183.

## What changed
- Add public Python API `libneo.chartmap`:
  - `write_chartmap_from_vmec_boundary(...)` (map2disc per zeta slice)
- `write_chartmap_from_stl(...)` (wraps existing STL slice + hole
handling pipeline)
- Add CLI entrypoint `libneo-write-chartmap` with `from-vmec` and
`from-stl` subcommands.
- Add `chartmap` optional dependency extra in `pyproject.toml` for
`map2disc` + NetCDF stack.
- Add CTest coverage that generates a VMEC chartmap via the Python API
and validates/roundtrips it with `libneo_coordinates`.

## Usage
- Python: `from libneo.chartmap import
write_chartmap_from_vmec_boundary`
- CLI: `libneo-write-chartmap from-vmec wout.nc out.chartmap.nc`

## Tests
Local `make test`:
- 54/54 tests passed (includes `setup_vmec_chartmap_python` +
`test_python_chartmap_generator`).


___

### **PR Type**
Enhancement


___

### **Description**
- Expose chartmap generators via public Python API and CLI
  - `write_chartmap_from_vmec_boundary()` for VMEC boundary mapping
  - `write_chartmap_from_stl()` for STL boundary mapping

- Add `libneo-write-chartmap` CLI entrypoint with subcommands

- Add optional `chartmap` dependency extra in pyproject.toml

- Add comprehensive test coverage validating generated chartmaps


___

### Diagram Walkthrough


```mermaid
flowchart LR
  A["VMEC wout.nc<br/>or STL file"] -->|"write_chartmap_from_vmec_boundary<br/>write_chartmap_from_stl"| B["Python API<br/>libneo.chartmap"]
  B -->|"libneo-write-chartmap CLI"| C["chartmap.nc<br/>NetCDF output"]
  C -->|"validate_chartmap_file<br/>roundtrip test"| D["libneo_coordinates<br/>validation"]
```



<details><summary><h3>File Walkthrough</h3></summary>

<table><thead><tr><th></th><th align="left">Relevant
files</th></tr></thead><tbody><tr><td><strong>Enhancement</strong></td><td><table>
<tr>
  <td>
    <details>
<summary><strong>chartmap.py</strong><dd><code>Core chartmap generation
function

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -256,6 +256,16 @@ add_test(
           --output-dir ${CMAKE_CURRENT_BINARY_DIR}
 )
 
+add_test(
+  NAME setup_vmec_chartmap_python
+  COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/scripts/setup_vmec_chartmap_python.py
+          --output-dir ${CMAKE_CURRENT_BINARY_DIR}
+)
+set_tests_properties(setup_vmec_chartmap_python PROPERTIES
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  DEPENDS setup_vmec_wout
+)
+
 add_test(NAME test_chartmap_coordinates
   COMMAND test_chartmap_coordinates.x)
 set_tests_properties(test_chartmap_coordinates PROPERTIES
@@ -268,14 +278,26 @@ set_tests_properties(test_chartmap_validator PROPERTIES
   FAIL_REGULAR_EXPRESSION "STOP"
   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 
+add_library(chartmap_test_utils STATIC source/chartmap_test_utils.f90)
+target_link_libraries(chartmap_test_utils PUBLIC neo)
+
 add_executable(test_vmec_chartmap_generator.x source/test_vmec_chartmap_generator.f90)
-target_link_libraries(test_vmec_chartmap_generator.x neo)
+target_link_libraries(test_vmec_chartmap_generator.x chartmap_test_utils)
 add_test(NAME test_vmec_chartmap_generator
   COMMAND test_vmec_chartmap_generator.x)
 set_tests_properties(test_vmec_chartmap_generator PROPERTIES
   FAIL_REGULAR_EXPRESSION "STOP"
   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
   DEPENDS setup_vmec_wout)
+
+add_executable(test_python_chartmap_generator.x source/test_python_chartmap_generator.f90)
+target_link_libraries(test_python_chartmap_generator.x chartmap_test_utils)
+add_test(NAME test_python_chartmap_generator
+  COMMAND test_python_chartmap_generator.x)
+set_tests_properties(test_python_chartmap_generator PROPERTIES
+  FAIL_REGULAR_EXPRESSION "STOP"
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  DEPENDS setup_vmec_chartmap_python)
 
 add_executable(test_vmec_coordinate_system.x source/test_vmec_coordinate_system.f90)
 target_link_libraries(test_vmec_coordinate_system.x neo)
