--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -266,6 +266,28 @@ set_tests_properties(setup_vmec_chartmap_python PROPERTIES
   DEPENDS setup_vmec_wout
 )
 
+add_test(
+  NAME validate_vmec_map2disc_chartmap_boundary_python
+  COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/scripts/validate_vmec_map2disc_chartmap_boundary.py
+          --wout ${CMAKE_CURRENT_BINARY_DIR}/wout.nc
+          --chartmap ${CMAKE_CURRENT_BINARY_DIR}/wout_vmec_python.chartmap.nc
+)
+set_tests_properties(validate_vmec_map2disc_chartmap_boundary_python PROPERTIES
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  DEPENDS setup_vmec_chartmap_python
+)
+
+add_test(
+  NAME validate_vmec_map2disc_chartmap_boundary_cli
+  COMMAND ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/scripts/validate_vmec_map2disc_chartmap_boundary.py
+          --wout ${CMAKE_CURRENT_BINARY_DIR}/wout.nc
+          --chartmap ${CMAKE_CURRENT_BINARY_DIR}/wout_vmec_cli.chartmap.nc
+)
+set_tests_properties(validate_vmec_map2disc_chartmap_boundary_cli PROPERTIES
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  DEPENDS setup_vmec_chartmap_python
+)
+
 add_test(NAME test_chartmap_coordinates
   COMMAND test_chartmap_coordinates.x)
 set_tests_properties(test_chartmap_coordinates PROPERTIES
