Chartmap: generate from coils offset surface
Add a coils-driven chartmap generator: build a constant-distance offset surface from SIMPLE coils via distance field + marching cubes, slice it, and reuse map2disc chartmap writing. Includes CLI subcommand and deterministic CTest that generates chartmap+plots and validates roundtrip (issue #190).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ chartmap = [
     "netCDF4",
     "map2disc @ git+https://gitlab.mpcdf.mpg.de/gvec-group/map2disc.git",
     "scipy",
+    "scikit-image",
+    "matplotlib",
     "trimesh",
 ]
 dev = [
@@ -26,6 +28,7 @@ dev = [
     "matplotlib",
     "netCDF4",
     "trimesh",
+    "scikit-image",
     "map2disc @ git+https://gitlab.mpcdf.mpg.de/gvec-group/map2disc.git",
 ]
 
