chartmap: normal-offset VMEC boundary for map2disc

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,11 +18,13 @@ classifiers = [
 chartmap = [
     "netCDF4",
     "map2disc @ git+https://gitlab.mpcdf.mpg.de/gvec-group/map2disc.git",
+    "shapely",
     "scipy",
     "trimesh",
 ]
 dev = [
     "scipy",
+    "shapely",
     "matplotlib",
     "netCDF4",
     "trimesh",
