Add event detection to odeint_allroutines

--- a/test/odeint/CMakeLists.txt
+++ b/test/odeint/CMakeLists.txt
@@ -59,3 +59,8 @@ if(LIBNEO_ENABLE_GOLDEN_TESTS)
         FIXTURES_REQUIRED odeint_golden_fixture
     )
 endif()
+
+# Event detection test
+add_executable(test_odeint_events.x test_odeint_events.f90)
+target_link_libraries(test_odeint_events.x ${COMMON_LIBS})
+add_test(NAME test_odeint_events COMMAND test_odeint_events.x)
