--- a/draft/gpu_spline_1d_many/CMakeLists.txt
+++ b/draft/gpu_spline_1d_many/CMakeLists.txt
@@ -73,7 +73,7 @@ if(DRAFT_ENABLE_OMP_TARGET)
 endif()
 
 if(DRAFT_ENABLE_CUDA_FORTRAN)
-    set_source_files_properties(src/spline1d_many_cuda_fortran.f90 PROPERTIES
+    set_source_files_properties(src/spline1d_many_cuda_fortran.cuf PROPERTIES
         COMPILE_OPTIONS "-cuda;-gpu=ccnative"
     )
 endif()
@@ -160,4 +160,58 @@ if(DRAFT_ENABLE_CUDA_C)
     target_link_libraries(draft_spline2d_many PUBLIC draft_cuda2d_c_kernels)
     target_link_libraries(bench_spline2d_many PRIVATE cudart stdc++)
     target_link_directories(bench_spline2d_many PRIVATE /opt/cuda/lib64 /opt/cuda/targets/x86_64-linux/lib)
+endif()
+
+add_library(draft_spline3d_many STATIC
+    src/spline3d_many_cpu.f90
+    src/spline3d_many_openacc.f90
+    src/spline3d_many_omp_target.f90
+    src/spline3d_many_cuda_fortran.cuf
+    src/spline3d_many_cuda_c_wrapper.f90
+)
+target_link_libraries(draft_spline3d_many PUBLIC draft_interpolate)
+target_compile_options(draft_spline3d_many PRIVATE $<$<COMPILE_LANGUAGE:Fortran>:-O3>)
+
+add_executable(bench_spline3d_many src/bench_spline3d_many.f90)
+target_link_libraries(bench_spline3d_many PRIVATE draft_spline3d_many draft_spline1d_many)
+target_compile_options(bench_spline3d_many PRIVATE $<$<COMPILE_LANGUAGE:Fortran>:-O3>)
+target_link_options(bench_spline3d_many PRIVATE -gpu=ccnative)
+
+if(DRAFT_ENABLE_OPENACC)
+    target_link_options(bench_spline3d_many PRIVATE -acc)
+    set_source_files_properties(src/spline3d_many_openacc.f90 PROPERTIES
+        COMPILE_DEFINITIONS "SPLINE3D_BACKEND_OPENACC"
+        COMPILE_OPTIONS "-acc;-gpu=ccnative;-Minfo=accel"
+    )
+endif()
+
+if(DRAFT_ENABLE_OMP_TARGET)
+    target_link_options(bench_spline3d_many PRIVATE -mp=gpu)
+    set_source_files_properties(src/spline3d_many_omp_target.f90 PROPERTIES
+        COMPILE_DEFINITIONS "SPLINE3D_BACKEND_OMP_TARGET"
+        COMPILE_OPTIONS "-mp=gpu;-gpu=ccnative;-Minfo=mp"
+    )
+endif()
+
+if(DRAFT_ENABLE_CUDA_FORTRAN)
+    target_link_options(bench_spline3d_many PRIVATE -cuda -cudaforlibs)
+    set_source_files_properties(src/spline3d_many_cuda_fortran.cuf PROPERTIES
+        COMPILE_OPTIONS "-cuda;-gpu=ccnative"
+    )
+endif()
+
+if(DRAFT_ENABLE_CUDA_C)
+    set(CUDA3D_C_OBJ ${CMAKE_CURRENT_BINARY_DIR}/spline3d_many_cuda.o)
+    add_custom_command(
+        OUTPUT ${CUDA3D_C_OBJ}
+        COMMAND ${NVCC_EXECUTABLE} -c -O3 -Xcompiler=-fPIC -arch=native
+                ${CMAKE_CURRENT_LIST_DIR}/src/spline3d_many_cuda.cu -o ${CUDA3D_C_OBJ}
+        DEPENDS ${CMAKE_CURRENT_LIST_DIR}/src/spline3d_many_cuda.cu
+        VERBATIM
+    )
+    add_library(draft_cuda3d_c_kernels STATIC ${CUDA3D_C_OBJ})
+    set_target_properties(draft_cuda3d_c_kernels PROPERTIES LINKER_LANGUAGE C)
+    target_link_libraries(draft_spline3d_many PUBLIC draft_cuda3d_c_kernels)
+    target_link_libraries(bench_spline3d_many PRIVATE cudart stdc++)
+    target_link_directories(bench_spline3d_many PRIVATE /opt/cuda/lib64 /opt/cuda/targets/x86_64-linux/lib)
 endif()
